[project]
name = "agent-langgraph-lab"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.125.0",
    "ipywidgets>=8.1.8",
    "jieba>=0.42.1",
    "langchain>=1.3.4",
    "langchain-openai>=1.2.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-postgres>=3.1.0",
    "openai>=2.41.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "requests>=2.34.2",
    "uvicorn[standard]>=0.38.0",
    "voyageai>=0.4.0",
]

[project.scripts]
research-agent = "personal_research_agent.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
personal_research_agent = ["web/*.html", "web/*.css", "web/*.js"]
